fixed overflow-x to hidden

--- a/rocketseat-js-discover/exercises/exe003-temperature-convertion/style.css
+++ b/rocketseat-js-discover/exercises/exe003-temperature-convertion/style.css
@@ -7,6 +7,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     color: black;
+    overflow-x: hidden;
 }
 body{
     background:linear-gradient(to bottom,#EB6213, #F76714, #D15711, #AB470E, #6B2D09);
